--- a/sendCs.html
+++ b/sendCs.html
@@ -162,7 +162,7 @@
                     no: 51 + i,
                     dispatchDate: `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')} 11:00`,
                     client: '제이엠비즈콘_스페셜이벤트_고객사하나둘', // 20자
-                    event: 'Congratulations 이벤트_이벤트하나둘셋넷',
+                    event: 'Congratulations 이벤트',
                     productName: '[스타벅스]부드러운 디저트(ICE)(아이스 카페 아메리카노 2잔+부드러운 생크림 카스텔라)',
                     unitPrice: 13500,
                     expiryDate: '2025-12-24',
