--- a/sendCoupon.html
+++ b/sendCoupon.html
@@ -254,5 +254,24 @@
             </div>
         </div>
     </div>
+
+    <!-- Unsaved Changes Confirmation Modal -->
+    <div class="modal fade" id="unsavedChangesModal" tabindex="-1" aria-labelledby="unsavedChangesModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="unsavedChangesModalLabel">경고</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="h5" style="font-weight: 400;">입력된 데이터가 삭제됩니다. 정말 이동하시겠습니까?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+                    <button type="button" class="btn btn-primary" id="confirmNavigateBtn">확인</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
