취소 또는 페이지 이동시 경고 팝업처리

--- a/sendCoupon.html
+++ b/sendCoupon.html
@@ -264,7 +264,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p class="h5" style="font-weight: 400;">입력된 데이터가 삭제됩니다. 정말 이동하시겠습니까?</p>
+                    <p class="h5" id="unsavedChangesModalBody" style="font-weight: 400;">입력된 데이터가 삭제됩니다. 정말 이동하시겠습니까?</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
