--- a/sendCoupon.html
+++ b/sendCoupon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>쿠폰 발송</title>
+    <title>발송등록</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/themes/material_blue.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -14,7 +14,7 @@
     <div id="header-placeholder"></div>
 
     <div class="container mb-5">
-        <h2 class="mb-4">쿠폰 발송</h2>
+        <h2 class="mb-4">발송등록</h2>
         <!-- 1. 기본 정보 조회 및 입력 -->
         <div class="card mb-4">
             <div class="card-title">1. 기본 정보 조회 및 입력</div>
@@ -263,7 +263,7 @@
                     <h5 class="modal-title" id="unsavedChangesModalLabel">경고</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body text-center">
                     <p class="h5" id="unsavedChangesModalBody" style="font-weight: 400;">입력된 데이터가 삭제됩니다. 정말 이동하시겠습니까?</p>
                 </div>
                 <div class="modal-footer">
