--- a/sendCoupon.html
+++ b/sendCoupon.html
@@ -218,6 +218,9 @@
 
         // 헤더를 동적으로 로드하고 현재 페이지 메뉴를 활성화합니다.
         document.addEventListener("DOMContentLoaded", function() {
+            // 페이지 로드 시 페이드인 효과 적용
+            document.body.classList.add('loaded');
+
             fetch('partials/header.html')
                 .then(response => response.text())
                 .then(data => {
