--- a/sendCs.html
+++ b/sendCs.html
@@ -166,6 +166,9 @@
 
         document.addEventListener("DOMContentLoaded", function() {
             // 헤더 로드
+            // 페이지 로드 시 페이드인 효과 적용
+            document.body.classList.add('loaded');
+            
             fetch('partials/header.html')
                 .then(response => response.text())
                 .then(data => {
