--- a/sendQuery.html
+++ b/sendQuery.html
@@ -164,6 +164,9 @@
         }
 
         document.addEventListener("DOMContentLoaded", function() {
+            // 페이지 로드 시 페이드인 효과 적용
+            document.body.classList.add('loaded');
+
             // 헤더 로드
             fetch('partials/header.html')
                 .then(response => response.text())
